# autoskill-md

./: .gitignore  Cargo.toml  LICENSE  README.md  autoskill.config.json  go.mod  package-lock.json  package.json  pyproject.toml  ship.sh
.github/workflows/: release.yml
.well-known/: skills.md
autoskill_md/: runner.py
cmd/autoskill-md/: main.go
docs/: BUILD_AND_SHIP.md
scripts/: package-binary.sh  release.sh
src/: cli.js  cli.rs  config.js  config.rs  constants.js  constants.rs  generate.js  generate.rs  index.js  lib.rs  main.rs  readability.js  readability.rs  scan.js  scan.rs  secrets.js  secrets.rs
test/: cli.test.js  docs.test.js  generate.test.js  readability.test.js  scan.test.js  secrets.test.js
tests/: native.rs
